# MNIST_NUMC

./: .gitmodules  CMakeLists.txt  main.cu
include/: neuralNet.cuh
modules/: README.md
modules/MNIST/: README.md
modules/MNIST/include/MNIST/: readMNIST.hpp  showMNIST.hpp
modules/MNIST/src/: readMNIST.cpp  showMNIST.cpp
modules/layers/: README.md
modules/layers/include/layers/: affineLayer.cuh  dropoutLayer.cuh  layer.cuh  reluLayer.cuh
modules/layers/src/: affineLayer.cu  dropoutLayer.cu  layer.cu  reluLayer.cu
modules/lossFunctions/: README.md
modules/lossFunctions/include/lossFunctions/: softmax.cuh
modules/lossFunctions/src/: softmax.cu
modules/optimisers/: README.md
modules/optimisers/include/optimisers/: adam.cuh
modules/optimisers/src/: adam.cu
src/: NeuralNet.cu
